--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8498],[[4,5,6,0,[],[1,211,8286],[[7,8,9,10,[],[1,213,8282],[],[[11,0,0,[],[1,536,7959],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10849],[[4,5,6,0,[],[1,26,10820],[[7,8,9,10,[],[1,28,10815],[],[[11,0,0,[],[1,207,10634],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RFW Polteq WebShop Lashin","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin","*..","*Tests","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests","*../tests","*Login Positive","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests/login_positive.robot","*../tests/login_positive.robot","*<p>This is positive test of LogIN and LogOut.\x3c/p>","*Positive LogIn and Log Out"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RFW Polteq WebShop Lashin","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin","*..","*Tests","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests","*../tests","*Menu Items","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests/menu_items.robot","*../tests/menu_items.robot","*<p>This is tests for Check the availability of pages and menu elements, as well as the operation (redirection) of menu elements.\x3c/p>","*Menu_items"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"RFW Polteq WebShop Lashin","name":"RFW Polteq WebShop Lashin","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1","label":"RFW Polteq WebShop Lashin.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1-s1","label":"RFW Polteq WebShop Lashin.Tests.Login Positive","name":"Login Positive","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"RFW Polteq WebShop Lashin","name":"RFW Polteq WebShop Lashin","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"RFW Polteq WebShop Lashin.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1-s1","label":"RFW Polteq WebShop Lashin.Tests.Menu Items","name":"Menu Items","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1717238728018;
+window.output["baseMillis"] = 1717246648804;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8504;
+window.output["generated"] = 10862;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
