--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16483],[[4,5,6,0,[],[1,21,16462],[[7,8,9,10,[],[1,23,16458],[],[[11,0,0,[],[1,182,16298],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15059],[[4,5,6,0,[],[1,21,15035],[[7,8,9,10,[],[1,23,15029],[],[[11,0,0,[],[1,181,14870],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RFW Polteq WebShop Lashin","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin","*..","*Tests","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests","*../tests","*Menu Items","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests/menu_items.robot","*../tests/menu_items.robot","*<p>This is tests for Check the availability of pages and menu elements, as well as the operation (redirection) of menu elements.\x3c/p>","*Menu_items"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RFW Polteq WebShop Lashin","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin","*..","*Tests","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests","*../tests","*Search Field","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests/search_field.robot","*../tests/search_field.robot","*<p>This is positive test of Search_field. Tests for check avaliability of search field on the major pages were realised in menu_itema.robot\x3c/p>","*First test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"RFW Polteq WebShop Lashin","name":"RFW Polteq WebShop Lashin","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"RFW Polteq WebShop Lashin.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1","label":"RFW Polteq WebShop Lashin.Tests.Menu Items","name":"Menu Items","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"RFW Polteq WebShop Lashin","name":"RFW Polteq WebShop Lashin","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"id":"s1-s1","label":"RFW Polteq WebShop Lashin.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"id":"s1-s1-s1","label":"RFW Polteq WebShop Lashin.Tests.Search Field","name":"Search Field","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1717406514716;
+window.output["baseMillis"] = 1717492276172;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16494;
+window.output["generated"] = 15073;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
