--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12402],[[4,5,6,0,[],[1,22,12379],[[7,8,9,10,[],[1,23,12375],[],[[11,0,0,[],[1,175,12222],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16570],[[4,5,6,0,[],[1,21,16548],[[7,8,9,10,[],[1,23,16543],[],[[11,0,0,[],[1,192,16373],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RFW Polteq WebShop Lashin","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin","*..","*Tests","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests","*../tests","*Search Field","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests/search_field.robot","*../tests/search_field.robot","*<p>This is positive test of Search_field. Tests for check avaliability of search field on the major pages were realised in menu_itema.robot\x3c/p>","*First test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RFW Polteq WebShop Lashin","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin","*..","*Tests","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests","*../tests","*Filter Page","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests/filter_page.robot","*../tests/filter_page.robot","*<p>Tests of folter by field\x3c/p>","*First test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"RFW Polteq WebShop Lashin","name":"RFW Polteq WebShop Lashin","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1","label":"RFW Polteq WebShop Lashin.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1-s1","label":"RFW Polteq WebShop Lashin.Tests.Search Field","name":"Search Field","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"RFW Polteq WebShop Lashin","name":"RFW Polteq WebShop Lashin","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1","label":"RFW Polteq WebShop Lashin.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1-s1","label":"RFW Polteq WebShop Lashin.Tests.Filter Page","name":"Filter Page","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1717492773261;
+window.output["baseMillis"] = 1717502294377;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12409;
+window.output["generated"] = 16577;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
