--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16570],[[4,5,6,0,[],[1,21,16548],[[7,8,9,10,[],[1,23,16543],[],[[11,0,0,[],[1,192,16373],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16351],[[4,5,6,0,[],[1,22,16328],[[7,8,9,10,[],[1,25,16324],[],[[11,0,0,[],[1,190,16158],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RFW Polteq WebShop Lashin","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin","*..","*Tests","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests","*../tests","*Filter Page","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests/filter_page.robot","*../tests/filter_page.robot","*<p>Tests of folter by field\x3c/p>","*First test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RFW Polteq WebShop Lashin","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin","*..","*Tests","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests","*../tests","*Product Card","*/Users/vl/Git/RFW_Polteq_WebShop_Lashin/tests/product_card.robot","*../tests/product_card.robot","*<p>Tests for product card\x3c/p>","*Test1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"RFW Polteq WebShop Lashin","name":"RFW Polteq WebShop Lashin","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1","label":"RFW Polteq WebShop Lashin.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1-s1","label":"RFW Polteq WebShop Lashin.Tests.Filter Page","name":"Filter Page","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"RFW Polteq WebShop Lashin","name":"RFW Polteq WebShop Lashin","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"RFW Polteq WebShop Lashin.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1","label":"RFW Polteq WebShop Lashin.Tests.Product Card","name":"Product Card","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1717502294377;
+window.output["baseMillis"] = 1717508321293;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16577;
+window.output["generated"] = 16359;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
